Internet explorer fixes and support -- popup menus and dialogs work better on IE6+, workflow editor works on IE7 (using excanvas). It actually *nearly* works on IE6 but there are some layout problems that are probably not worth wasting time on. If any IE users can test this that would be great!

--- a/static/june_2007_style/blue/panel_layout.css
+++ b/static/june_2007_style/blue/panel_layout.css
@@ -244,14 +244,6 @@ div.popupmenu-item:hover {
     top: 0; left: 0; width: 100%; height: 100%;
     z-index: 20000;
 }
-#overlay-inner {
-    width: 100%; height: 100%;
-    background-color:#FFF;
-    filter:alpha(opacity=75);
-    -moz-opacity: 0.75;
-    opacity: 0.75;
-    z-index: 20000;
-}
 
 .dialog-box-container {
     position: relative;
@@ -259,15 +251,11 @@ div.popupmenu-item:hover {
     margin-right: auto;
     margin-left: auto;
 }
-.dialog-box-underlay {
-    position: absolute;
-    left: -1em;
-    right: -1em;
-    top: -1em;
-    bottom: -1em;
-    opacity: 0.5;
-    background: black;
-    z-index: -1;
+
+.dialog-box-wrapper {
+    position: relative;
+    padding: 1em;
+    background-color: rgba(0,0,0,0.5);
     -moz-border-radius: 1em;
     -webkit-border-radius: 1em;
 }
